# stremalit_xml_optimum_converter

./: README.md  app.py  cli.py  main.py  pyproject.toml
input/: demo_optimum.xml
src/: models.py  pdf_gen.py  xml_parser.py
tests/: test_core.py
