[project]
name = "streamlit-optimum-convertor"
version = "0.1.0"
description = "Démo pipo d'un convertisseur .xml optimum utilisé par des assureur en .pdf"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fpdf2>=2.8.7",
    "pydantic>=2.13.3",
    "streamlit>=1.57.0",
    "typer[all]>=0.25.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.12",
]

[tool.pytest.ini_options]
pythonpath = "."